Use correct bit operator (XERCESC-2004)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1413511 13f79535-47bb-0310-9956-ffa450edef68